[gd_scene load_steps=18 format=2]

[ext_resource path="res://Juego/estacion/AreaAtraccion.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juego/Enemigos/spaceStationnnnn2.png" type="Texture" id=2]
[ext_resource path="res://Juego/Enemigos/spaceStationnnnnn3.png" type="Texture" id=3]
[ext_resource path="res://Juego/Enemigos/spaceStationnnn1.png" type="Texture" id=4]
[ext_resource path="res://Juego/Enemigos/spaceStationnnnnn4.png" type="Texture" id=5]
[ext_resource path="res://Juego/Enemigos/BaseEnemiga.gd" type="Script" id=6]
[ext_resource path="res://Juego/Area2D.gd" type="Script" id=7]
[ext_resource path="res://Juego/Enemigos/PosicionesSpawns.gd" type="Script" id=8]
[ext_resource path="res://Juego/Enemigos/EnemigoOrbital.tscn" type="PackedScene" id=9]
[ext_resource path="res://Juego/Enemigos/RutaEnemigo.gd" type="Script" id=10]

[sub_resource type="CapsuleShape2D" id=4]
radius = 23.5359
height = 44.1971

[sub_resource type="CapsuleShape2D" id=5]
radius = 27.6221
height = 84.1729

[sub_resource type="CapsuleShape2D" id=6]
radius = 54.2575
height = 361.853

[sub_resource type="Animation" id=1]
resource_name = "default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 8.72577 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "rotacion_anti_horario"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -360.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "rotacion_horario"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Curve2D" id=7]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -438.164, 63.0539, 0, 0, 0, 0, -419.524, -141.415, 0, 0, 0, 0, -325.03, -305.988, 0, 0, 0, 0, -174.576, -404.114, 0, 0, 0, 0, -69.0587, -446.03, 0, 0, 0, 0, 24.4299, -448.348, 0, 0, 0, 0, 96.2138, -435.303, 0, 0, 0, 0, 213.014, -395.479, 0, 0, 0, 0, 332.865, -288.748, 0, 0, 0, 0, 425.576, -139.351, 0, 0, 0, 0, 448.285, 71.3206, 0, 0, 0, 0, 409.183, 192.823, 0, 0, 0, 0, 324.518, 299.662, 0, 0, 0, 0, 101.872, 432.491, 0, 0, 0, 0, -118.914, 420.658, 0, 0, 0, 0, -324.107, 290.932, 0, 0, 0, 0, -407.787, 169.024, 0, 0, 0, 0, -430.967, 76.9137, 0, 0, 0, 0, -438.164, 63.0539 )
}

[node name="BaseEnemiga" type="Node2D"]
rotation = 0.152293
script = ExtResource( 6 )
__meta__ = {
"_edit_vertical_guides_": [  ]
}
orbital = ExtResource( 9 )

[node name="Sprites" type="Node2D" parent="."]
rotation = -0.150077

[node name="Sprite1" type="Sprite" parent="Sprites"]
position = Vector2( 151.951, -96.6891 )
rotation = -3.13987
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="Sprites"]
texture = ExtResource( 2 )

[node name="Sprite3" type="Sprite" parent="Sprites"]
position = Vector2( 4.33438, -259.409 )
scale = Vector2( 0.803033, 0.908563 )
texture = ExtResource( 3 )

[node name="Sprite4" type="Sprite" parent="Sprites"]
position = Vector2( 4.27738, -216.845 )
scale = Vector2( 0.8252, 0.930475 )
texture = ExtResource( 5 )

[node name="AreaColision" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 9
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaColision"]
position = Vector2( -121.91, -78.8646 )
rotation = 1.41604
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AreaColision"]
position = Vector2( 117.324, -119.408 )
rotation = 1.40795
shape = SubResource( 5 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="AreaColision"]
position = Vector2( -7.19891, -62.1878 )
rotation = -0.149824
shape = SubResource( 6 )

[node name="AreaAtraccion" parent="." instance=ExtResource( 1 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/default = SubResource( 1 )
anims/rotacion_anti_horario = SubResource( 2 )
anims/rotacion_horario = SubResource( 3 )

[node name="ImpactosSFX" type="AudioStreamPlayer2D" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="PosicionesSpawns" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="Norte" type="Position2D" parent="PosicionesSpawns"]
position = Vector2( -54.3318, -334.244 )

[node name="Sur" type="Position2D" parent="PosicionesSpawns"]
position = Vector2( 46.2662, 271.816 )

[node name="Oeste" type="Position2D" parent="PosicionesSpawns"]
position = Vector2( -227.724, 27.3722 )

[node name="Este" type="Position2D" parent="PosicionesSpawns"]
position = Vector2( 217.24, -16.668 )

[node name="PosicionesSpanw" type="Node2D" parent="."]

[node name="RutaEnemigo" type="Path2D" parent="PosicionesSpanw"]
curve = SubResource( 7 )
script = ExtResource( 10 )

[node name="TimerSpawnearEnemigos" type="Timer" parent="."]

[connection signal="body_entered" from="AreaColision" to="." method="_on_AreaColision_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="timeout" from="TimerSpawnearEnemigos" to="." method="_on_TimerSpawnearEnemigos_timeout"]
